syntax = "proto3";

package measure;

option go_package = "measure";
option java_package = "us.ihmc.sensei.proto";
option java_generate_equals_and_hash = true;
option java_multiple_files = true;
option java_outer_classname = "SubjectProto";

enum Subject {
    host              = 0;
    network           = 1;
    traffic           = 2;
    cpu               = 3;
    memory            = 4;
    os                = 5;
    network_health    = 6;
    disservice        = 7;
    mockets           = 8;
    link_description  = 9;
    netviewer_request = 10;
    geolocation       = 11;
    battery           = 12;
    group             = 13;
    group_connection  = 14;
    group_member      = 15;
    process           = 16;
	netproxy          = 17;
}